Revision history for ExtUtils-Manifest

{{$NEXT}}

1.70  2014-12-31
  - also skip _eumm, an artifact of ExtUtils::MakeMaker 7.05*
  - avoid unreliable permissions tests on cygwin

1.69  2014-11-16
  - also skip _build_params, generated by Module::Build::Tiny

1.68  Tue, Sep 16, 2014
  - Fix regression with manifind() and following symlinks

1.66  Sun, Aug 31, 2014
  - manifind() will now follow symlinks
  - Tests fixed if PERL_MM_MANIFEST_VERBOSE env var is set to
    false value
  - Fixed bug with maniread()'s handling of quoted filenames

1.65  Fri, Aug  8, 2014
  - Support perls < v5.8.3 once again
  - Don't generate MANIFESTs with CRLFs on Windows

1.64  Thu, Jul 17, 2014
  - Ignore vim swap files and prove generated files
  - use Exporter import
  - use 'our' instead of use vars

1.63  Sun, Sep 8, 2013
  - Deal with VMS extended filespecs

1.62  Sun, Sep 8, 2013
  - Normalize VMS case handling in ExtUtils::Manifest.

1.61  Tue, Sep 11, 2012
  - Avoid some test-time warnings.
  - Current VMS can handle filenames with spaces.

1.60  Mon, Aug 19, 2011
  - Clean up MANIFEST before creating a new one.

1.59  Mon, Aug 8, 2011
  - Prevent mixing non-native and native newlines in MANIFEST files

1.58  Sun, Nov 21, 2009
  - add MYMETA files to default skip list:
     http://rt.cpan.org/Ticket/Display.html?id=50923
    (suggested by DAGOLDEN)
  - Avoid Devel::Cover and Devel::CoverX::Covered files
    (suggested by daxim)

1.57  Sat, Sep 19, 2009
  - Enhancements to MANIFEST.SKIP from Module::Build:
     http://rt.cpan.org/Ticket/Display.html?id=47401
  - ExtUtils::Manifest::maniskip() incorrectly parses some
    lines with comments and internal whitespace filenames:
      http://rt.cpan.org/Ticket/Display.html?id=45016

1.56  Sun, Jan 4, 2009
  - Add support for VMS in Unix or extended character set mode:
     https://rt.cpan.org/Ticket/Display.html?id=42146

1.55  Sun, Oct 12, 2008
  - test nit with space in filename on VMS: